--- a/SchoolTimer/package.json
+++ b/SchoolTimer/package.json
@@ -10,8 +10,10 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-swipeout": "^2.3.3",
-    "react-native-vector-icons": "^4.5.0"
+    "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.0.0-beta.27"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
